Accept PMA targets alias and document local target constraints

--- a/src/codex_autorunner/static/index.html
+++ b/src/codex_autorunner/static/index.html
@@ -245,7 +245,7 @@
           <div class="form-group">
             <label for="pma-target-ref">Target ref</label>
             <input type="text" id="pma-target-ref" placeholder="web | discord:123 | chat:telegram:-1001:55" />
-            <span class="form-hint">Supported: web, local:&lt;path&gt;, telegram:&lt;chat_id&gt;[:&lt;thread_id&gt;], discord:&lt;channel_id&gt;, chat:telegram:..., chat:discord:...</span>
+            <span class="form-hint">Supported: web, local:&lt;path&gt;, telegram:&lt;chat_id&gt;[:&lt;thread_id&gt;], discord:&lt;channel_id&gt;, chat:telegram:..., chat:discord:... Local path refs must resolve within the current hub root.</span>
           </div>
           <div class="pma-docs-actions">
             <button class="primary sm" id="pma-targets-add">Add target</button>
