Add hub web destination controls and channel directory APIs

--- a/src/codex_autorunner/static/index.html
+++ b/src/codex_autorunner/static/index.html
@@ -113,6 +113,21 @@
         <div class="muted small">Loading…</div>
       </div>
     </section>
+    <section class="hub-repo-panel">
+      <div class="hub-panel-header">
+        <div class="hub-panel-title">
+          <span class="label">Channel Directory</span>
+          <div class="form-group">
+            <input id="hub-channel-query" type="text" placeholder="Search key/display/meta…" spellcheck="false" />
+          </div>
+        </div>
+        <div class="hub-panel-actions">
+          <button class="ghost sm" id="hub-channel-search" type="button">Search</button>
+          <button class="ghost sm" id="hub-channel-refresh" type="button">Refresh</button>
+        </div>
+      </div>
+      <div class="hub-channel-list muted small" id="hub-channel-list">Loading channel directory…</div>
+    </section>
   </div>
   <div class="hub-shell hidden" id="pma-shell" data-pma-view="chat">
     <header class="hub-hero pma-hero">
