Close web parity gaps for destinations and channel directory

--- a/src/codex_autorunner/static/index.html
+++ b/src/codex_autorunner/static/index.html
@@ -120,6 +120,9 @@
           <div class="form-group">
             <input id="hub-channel-query" type="text" placeholder="Search key/display/meta…" spellcheck="false" />
           </div>
+          <div class="form-group">
+            <input id="hub-channel-limit" type="number" min="1" max="1000" step="1" value="100" placeholder="Limit" />
+          </div>
         </div>
         <div class="hub-panel-actions">
           <button class="ghost sm" id="hub-channel-search" type="button">Search</button>
