Improve channel directory UX and PMA target friendly labels (#807)

--- a/src/codex_autorunner/static/index.html
+++ b/src/codex_autorunner/static/index.html
@@ -100,15 +100,13 @@
           <div class="form-group">
             <input id="hub-channel-query" type="text" placeholder="Search key/display/meta…" spellcheck="false" />
           </div>
-          <div class="form-group">
-            <input id="hub-channel-limit" type="number" min="1" max="1000" step="1" value="100" placeholder="Limit" />
-          </div>
         </div>
         <div class="hub-panel-actions">
           <button class="ghost sm" id="hub-channel-search" type="button">Search</button>
           <button class="ghost sm" id="hub-channel-refresh" type="button">Refresh</button>
         </div>
       </div>
+      <div class="muted small">Copy Ref copies a PMA delivery target ref (for example, <code>telegram:-100123:5</code>).</div>
       <div class="hub-channel-list muted small" id="hub-channel-list">Loading channel directory…</div>
     </section>
   </div>
