Update hub-repo-panel styles in index.html and styles.css

--- a/src/codex_autorunner/static/index.html
+++ b/src/codex_autorunner/static/index.html
@@ -93,7 +93,7 @@
         <div class="muted small">Loading…</div>
       </div>
     </section>
-    <section class="hub-repo-panel">
+    <section class="hub-repo-panel hub-channel-panel">
       <div class="hub-panel-header">
         <div class="hub-panel-title">
           <span class="label">Channel Directory</span>
