Finalize PMA target-removal cleanup

--- a/src/codex_autorunner/static/index.html
+++ b/src/codex_autorunner/static/index.html
@@ -106,7 +106,7 @@
           <button class="ghost sm" id="hub-channel-refresh" type="button">Refresh</button>
         </div>
       </div>
-      <div class="muted small">Copy Ref copies a PMA delivery target ref (for example, <code>telegram:-100123:5</code>).</div>
+      <div class="muted small">Copy Ref copies a channel ref (for example, <code>telegram:-100123:5</code>).</div>
       <div class="hub-channel-list muted small" id="hub-channel-list">Loading channel directory…</div>
     </section>
   </div>
