--- a/src/codex_autorunner/static/index.html
+++ b/src/codex_autorunner/static/index.html
@@ -106,7 +106,7 @@
           <button class="ghost sm" id="hub-channel-refresh" type="button">Refresh</button>
         </div>
       </div>
-      <div class="muted small">Copy Ref copies a PMA delivery target ref (for example, <code>telegram:-100123:5</code>).</div>
+      <div class="muted small">Copy Ref copies a channel ref (for example, <code>telegram:-100123:5</code>).</div>
       <div class="hub-channel-list muted small" id="hub-channel-list">Loading channel directory…</div>
     </section>
   </div>
@@ -154,19 +154,6 @@
             thread</button>
           <span class="pma-status-pill" id="pma-chat-status">idle</span>
         </div>
-      </div>
-      <div class="pma-targets-panel">
-        <div class="pma-targets-header">
-          <span class="pma-targets-label">Delivery targets</span>
-          <button class="pma-icon-btn-small" id="pma-targets-refresh" title="Refresh targets">↻</button>
-          <button class="ghost sm pma-targets-clear" id="pma-targets-clear" type="button">Clear</button>
-        </div>
-        <div class="pma-targets-input-row">
-          <input id="pma-target-ref-input" class="pma-target-ref-input" type="text"
-            placeholder="web | local:path | telegram:chat[:thread] | discord:channel" spellcheck="false" />
-          <button class="primary sm" id="pma-target-add" type="button">Add</button>
-        </div>
-        <div class="pma-targets-list muted small" id="pma-targets-list">Loading targets…</div>
       </div>
     </section>
     <section class="pma-chat-section" id="pma-chat-section">
