Tighten hub topbar search and repo badge spacing

--- a/src/codex_autorunner/static/index.html
+++ b/src/codex_autorunner/static/index.html
@@ -83,9 +83,8 @@
               </select>
             </label>
             <label class="hub-repo-control hub-repo-search-control">
-              Search
               <input id="hub-repo-search" class="hub-repo-search-input" type="text"
-                placeholder="Search repos + channels…" spellcheck="false" />
+                placeholder="Search…" spellcheck="false" aria-label="Search repos and channels" />
             </label>
           </div>
         </div>
